--- a/jaleApp/src/main/resources/templates/conductor/updateConductor.html
+++ b/jaleApp/src/main/resources/templates/conductor/updateConductor.html
@@ -65,30 +65,31 @@
 						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
 
 				</div>
-				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 				<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
 
 				</div>
-				</div>	
+				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/brands/list}">Marca</a>						
+
+				</div>
+				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/vehicles/listFind}">Buscar conductores</a>						
+
+				</div>
+				</div>
+				</div>
+					
+
 				
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/states/list}">Estados de viaje</a>
-
-					</div>
-				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/viajes/list}">Viajes
-						</a>
-					</div>
-
-				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
@@ -97,14 +98,35 @@
 					</div>
 
 				</div>
+				
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/users/list}">Users</a>						
+
+				</div>
+				</div></li>
+				<li class="nav-item"><a class="nav-link collapsed" href="#"
+				data-target="#collapseTwo" aria-expanded=true
+				aria-controls="collapseTwo"> <i class="fas fa-fw fa-cog"></i> <span>Reporte</span>
+				</a>
+				
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/reservas/list}">Reservas </a>
+						<a class="collapse-item" th:href="@{/calificacions/reports}">Reportes de calificacion </a>
 					</div>
 
 				</div>
-					</li>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/reservas/reports}">Reportes de reservacion </a>
+					</div>
+
+				</div>
+				
+				</li>
 
 			<!-- Sidebar Toggler (Sidebar) -->
 
@@ -179,10 +201,10 @@
 					<h1 class="h3 mb-4 text-gray-800">Registrar Conductor</h1>
 
 					<hr class="sidebar-divider">
-					
-					
-					
-					
+
+
+
+
 					<div th:object="${conductor}" th:remove="tag">
 						<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger"
 							role="alert">
@@ -192,10 +214,9 @@
 
 					<form th:action="@{/conductors/save}" th:object="${conductor}"
 						method="post">
-						
+
 						<div class="form-group row">
-							<label for="Id" class="col-sm-2 col-form-label">Id:
-							</label>
+							<label for="Id" class="col-sm-2 col-form-label">Id: </label>
 							<div class="col-sm-6">
 								<input type="text" th:field="*{idConductor}"
 									class="form-control"
@@ -205,7 +226,7 @@
 									th:errors="*{idConductor}"></small>
 							</div>
 						</div>
-						
+
 						<div class="form-group row">
 							<label for="DNI" class="col-sm-2 col-form-label">DNI: </label>
 							<div class="col-sm-6">
@@ -230,51 +251,57 @@
 						</div>
 
 						<div class="form-group row">
-							<label for="email" class="col-sm-2 col-form-label">Email: </label>
-							<div class="col-sm-6">
-								<input type="text" th:field="*{emailConductor}" class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('emailConductor')}" th:errors="*{emailConductor}"></small>
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<label for="address" class="col-sm-2 col-form-label">Direccion: </label>
-							<div class="col-sm-6">
-								<input type="text" th:field="*{addressConductor}" class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('addressConductor')}" th:errors="*{addressConductor}"></small>
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<label for="tiu" class="col-sm-2 col-form-label">TIU:
+							<label for="email" class="col-sm-2 col-form-label">Email:
 							</label>
 							<div class="col-sm-6">
-								<input type="text" th:field="*{TIU}"
+								<input type="text" th:field="*{emailConductor}"
 									class="form-control"
 									th:errorclass="'form-control alert-danger'" /> <small
 									class="form-text text-danger"
-									th:if="${#fields.hasErrors('TIU')}"
-									th:errors="*{TIU}"></small>
+									th:if="${#fields.hasErrors('emailConductor')}"
+									th:errors="*{emailConductor}"></small>
 							</div>
 						</div>
 
 						<div class="form-group row">
-							<label for="descripcion" class="col-sm-2 col-form-label">Descripcion: </label>
+							<label for="address" class="col-sm-2 col-form-label">Direccion:
+							</label>
 							<div class="col-sm-6">
-								<input type="text" th:field="*{descriptionConductor}" class="form-control"
+								<input type="text" th:field="*{addressConductor}"
+									class="form-control"
 									th:errorclass="'form-control alert-danger'" /> <small
 									class="form-text text-danger"
-									th:if="${#fields.hasErrors('descriptionConductor')}" th:errors="*{descriptionConductor}"></small>
+									th:if="${#fields.hasErrors('addressConductor')}"
+									th:errors="*{addressConductor}"></small>
 							</div>
 						</div>
 
 						<div class="form-group row">
-							<label for="account" class="col-sm-2 col-form-label">Numero de Cuenta:
+							<label for="tiu" class="col-sm-2 col-form-label">TIU: </label>
+							<div class="col-sm-6">
+								<input type="text" th:field="*{TIU}" class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('TIU')}" th:errors="*{TIU}"></small>
+							</div>
+						</div>
+
+						<div class="form-group row">
+							<label for="descripcion" class="col-sm-2 col-form-label">Descripcion:
 							</label>
+							<div class="col-sm-6">
+								<input type="text" th:field="*{descriptionConductor}"
+									class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('descriptionConductor')}"
+									th:errors="*{descriptionConductor}"></small>
+							</div>
+						</div>
+
+						<div class="form-group row">
+							<label for="account" class="col-sm-2 col-form-label">Numero
+								de Cuenta: </label>
 							<div class="col-sm-6">
 								<input type="number" th:field="*{accountNumber}"
 									class="form-control"
@@ -285,7 +312,8 @@
 							</div>
 						</div>
 						<div class="form-group row">
-							<label for="saldo" class="col-sm-2 col-form-label">Balance a favor: </label>
+							<label for="saldo" class="col-sm-2 col-form-label">Balance
+								a favor: </label>
 							<div class="col-sm-6">
 								<input type="number" th:field="*{balanceFavor}"
 									class="form-control"
@@ -295,10 +323,11 @@
 									th:errors="*{balanceFavor}"></small>
 							</div>
 						</div>
-						
-						
+
+
 						<div class="form-group row">
-							<label for="deuda" class="col-sm-2 col-form-label">Deuda: </label>
+							<label for="deuda" class="col-sm-2 col-form-label">Deuda:
+							</label>
 							<div class="col-sm-6">
 								<input type="number" th:field="*{balanceDebt}"
 									class="form-control"
@@ -307,8 +336,8 @@
 									th:if="${#fields.hasErrors('balanceDebt')}"
 									th:errors="*{balanceDebt}"></small>
 							</div>
-						</div>						
-						
+						</div>
+
 						<div class="form-group row">
 							<div class="col-sm-6">
 								<input type="submit" value="Guardar" class="btn btn-secondary"></input>
