--- a/jaleApp/src/main/resources/templates/marca/marca.html
+++ b/jaleApp/src/main/resources/templates/marca/marca.html
@@ -65,30 +65,31 @@
 						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
 
 				</div>
-				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 				<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
 
 				</div>
-				</div>	
+				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/brands/list}">Marca</a>						
+
+				</div>
+				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/conductors/listFind}">Buscar conductores</a>						
+
+				</div>
+				</div>
+				</div>
+					
+
 				
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/states/list}">Estados de viaje</a>
-
-					</div>
-				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/viajes/list}">Viajes
-						</a>
-					</div>
-
-				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
@@ -97,13 +98,37 @@
 					</div>
 
 				</div>
+				
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/users/list}">Users</a>						
+
+				</div>
+				</div>
+				
+				
+					</li>
+					<li class="nav-item"><a class="nav-link collapsed" href="#"
+				data-target="#collapseTwo" aria-expanded=true
+				aria-controls="collapseTwo"> <i class="fas fa-fw fa-cog"></i> <span>Reporte</span>
+				</a>
+				
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/reservas/list}">Reservas </a>
+						<a class="collapse-item" th:href="@{/calificacions/reports}">Reportes de calificacion </a>
 					</div>
 
 				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/reservas/reports}">Reportes de reservacion </a>
+					</div>
+
+				</div>
+				
 				</li>
 
 			<!-- Sidebar Toggler (Sidebar) -->
@@ -176,115 +201,58 @@
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Registrar Pasajero</h1>
+					<h1 class="h3 mb-4 text-gray-800">Registrar Marca</h1>
 
 					<hr class="sidebar-divider">
-					<div th:object="${passenger}" th:remove="tag">
+					<div th:object="${brand}" th:remove="tag">
 						<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger"
 							role="alert">
 							<li th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
 						</ul>
 					</div>
 
-					<form th:action="@{/passengers/save}" th:object="${passenger}"
+					<form th:action="@{/brands/save}" th:object="${brand}"
 						method="post">
 						<div class="form-group row">
-							<label for="DNI" class="col-sm-2 col-form-label">DNI </label>
+							<label for="nameM" class="col-sm-2 col-form-label">Nombre de marca </label>
 							<div class="col-sm-6">
-								<input type="number" th:field="*{DNI}" class="form-control"
+								<input placeholder="Ingrese nombre de la marca" type="text" th:field="*{nameMarca}" class="form-control"
 									th:errorclass="'form-control alert-danger'" /> <small
 									class="form-text text-danger"
-									th:if="${#fields.hasErrors('DNI')}" th:errors="*{DNI}"></small>
+									th:if="${#fields.hasErrors('nameMarca')}" th:errors="*{nameMarca}"></small>
 							</div>
 						</div>
 
 						<div class="form-group row">
-							<label for="name" class="col-sm-2 col-form-label">Pasajero:
+							<label for="name" class="col-sm-2 col-form-label">Modelo:
 							</label>
 							<div class="col-sm-6">
-								<input type="text" th:field="*{namePasajero}"
+								<input placeholder="Ingrese nombre del modelo" type="text" th:field="*{nameModelo}"
 									class="form-control"
 									th:errorclass="'form-control alert-danger'" /> <small
 									class="form-text text-danger"
-									th:if="${#fields.hasErrors('namePasajero')}"
-									th:errors="*{namePasajero}"></small>
+									th:if="${#fields.hasErrors('nameModelo')}"
+									th:errors="*{nameModelo}"></small>
 							</div>
 						</div>
 
 						<div class="form-group row">
-							<label for="address" class="col-sm-2 col-form-label">Email: </label>
+							<label for="year" class="col-sm-2 col-form-label">Año: </label>
 							<div class="col-sm-6">
-								<input type="text" th:field="*{emailPasajero}" class="form-control"
+								<input placeholder="Ingrese el año ( Ej: 2012)" type="text" th:field="*{yearAuto}" class="form-control"
 									th:errorclass="'form-control alert-danger'" /> <small
 									class="form-text text-danger"
-									th:if="${#fields.hasErrors('emailPasajero')}" th:errors="*{emailPasajero}"></small>
+									th:if="${#fields.hasErrors('yearAuto')}" th:errors="*{yearAuto}"></small>
 							</div>
 						</div>
 
-						<div class="form-group row">
-							<label for="address" class="col-sm-2 col-form-label">Direccion: </label>
-							<div class="col-sm-6">
-								<input type="text" th:field="*{addressPasajero}" class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('addressPasajero')}" th:errors="*{addressPasajero}"></small>
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<label for="tiu" class="col-sm-2 col-form-label">TIU:
-							</label>
-							<div class="col-sm-6">
-								<input type="text" th:field="*{TIU}"
-									class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('TIU')}"
-									th:errors="*{TIU}"></small>
-							</div>
-						</div>
-
-
-						<div class="form-group row">
-							<label for="account" class="col-sm-2 col-form-label">Numero de Cuenta:
-							</label>
-							<div class="col-sm-6">
-								<input type="number" th:field="*{accountNumber}"
-									class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('accountNumber')}"
-									th:errors="*{accountNumber}"></small>
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="saldo" class="col-sm-2 col-form-label">Balance a favor: </label>
-							<div class="col-sm-6">
-								<input type="number" th:field="*{balanceFavor}"
-									class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('balanceFavor')}"
-									th:errors="*{balanceFavor}"></small>
-							</div>
-						</div>
 						
-						<div class="form-group row">
-							<label for="deuda" class="col-sm-2 col-form-label">Deuda: </label>
-							<div class="col-sm-6">
-								<input type="number" th:field="*{balanceDebt}"
-									class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('balanceDebt')}"
-									th:errors="*{balanceDebt}"></small>
-							</div>
-						</div>						
+					
 						
 						<div class="form-group row">
 							<div class="col-sm-6">
 								<input type="submit" value="Guardar" class="btn btn-secondary"></input>
-								<a href="/passengers/list" class="btn btn-danger">Cancelar</a>
+								<a href="/brands/list" class="btn btn-danger">Cancelar</a>
 							</div>
 						</div>
 
