--- a/jaleApp/src/main/resources/templates/user/listUsers.html
+++ b/jaleApp/src/main/resources/templates/user/listUsers.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>JaleApp</title>
+<title>JALEAPP</title>
 
 <!-- Custom fonts for this template-->
 <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
@@ -33,14 +33,15 @@
 		<ul
 			class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
 			id="accordionSidebar">
+
 			<!-- Sidebar - Brand -->
 			<a
 				class="sidebar-brand d-flex align-items-center justify-content-center"
-				th:href="@{/vehicles/list}">
+				th:href="@{/passengers/list}">
 				<div class="sidebar-brand-icon rotate-n-15">
 					<i class="fas fa-leaf"></i>
 				</div>
-				<div class="sidebar-brand-text mx-2">JaleApp Vehiculos</div>
+				<div class="sidebar-brand-text mx-2">JaleApp Pasajero</div>
 			</a>
 
 			<!-- Divider -->
@@ -56,41 +57,18 @@
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/passengers/list}">Pasajeros</a>
-
-				</div>
-				</div>
+					</div>
+					</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
-					<div class="bg-white py-2 collapse-inner rounded">
+				<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
 
 				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-				<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
-
 				</div>
-				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-				<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/brands/list}">Marca</a>						
-
-				</div>
-				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-				<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/conductors/listFind}">Buscar conductores</a>						
-
-				</div>
-				</div>
-				</div>
-					
-
 				
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+				
+	<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/rutas/list}">Rutas
@@ -99,15 +77,23 @@
 
 				</div>
 				
+						
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 				<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/users/list}">Users</a>						
 
 				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/roles/list}">Roles</a>						
+
+				</div>
+				</div>
 				</div>
 				
-				
+											
 					</li>
 					<li class="nav-item"><a class="nav-link collapsed" href="#"
 				data-target="#collapseTwo" aria-expanded=true
@@ -130,6 +116,11 @@
 				</div>
 				
 				</li>
+
+
+
+			<!-- Divider -->
+			<hr class="sidebar-divider">
 
 			<!-- Sidebar Toggler (Sidebar) -->
 
@@ -176,7 +167,6 @@
 								class="mr-2 d-none d-lg-inline text-gray-600 small"><img
 									th:src="@{/img/logout.png}" width="30" height="30" alt="logo"
 									align="middle"></img></span>
-
 						</a> <!-- Dropdown - User Information -->
 							<div
 								class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -185,8 +175,8 @@
 									class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Perfil
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#" data-toggle="modal"
-									data-target="#logoutModal"> <i
+								<a class="dropdown-item" href="categories/index"
+									data-toggle="modal" data-target="#logoutModal"> <i
 									class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
 									Cerrar sesión
 								</a>
@@ -201,85 +191,35 @@
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Registrar Vehiculo</h1>
+					<h1 class="h3 mb-4 text-gray-800">Usuarios</h1>
+
+					<a th:href="@{/users/new/}" class="btn btn-secondary btn-xs">Nuevo</a>
 
 					<hr class="sidebar-divider">
 
-					<form th:action="@{/vehicles/save}" th:object="${vehiculo}"
-						method="post">
-						
-						<div class="form-group row">
-							<label for="idState" class="col-sm-2 col-form-label">ID </label>
-							<div class="col-sm-6">
-								<input type="number" th:field="*{idVehiculo}" class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('idVehiculo')}" th:errors="*{idVehiculo}"></small>
-							</div>
-						</div>
-						
-						<div class="form-group row">
-							<label for="Placa" class="col-sm-2 col-form-label">Placa:
-							</label>
-							<div class="col-sm-6">
-								<input type="text" th:field="*{placaVehiculo}"
-									class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('placaVehiculo')}"
-									th:errors="*{placaVehiculo}"></small>
-							</div>
-						</div>
+					<table class="table table-striped">
+						<thead class="thead-dark">
+							<tr>
+								<th scope="col">Id</th>
+								<th scope="col">Usuario</th>
+								<th scope="col">Operacion</th>
 
-						<div class="form-group row">
-							<label for="Revision" class="col-sm-2 col-form-label">Revision
-								Tecnica: </label>
-							<div class="col-sm-6">
-								<input type="text" th:field="*{revisionVehiculo}"
-									class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('revisionVehiculo')}"
-									th:errors="*{revisionVehiculo}"></small>
-							</div>
-						</div>
 
-						<div class="form-group row">
-							<label for="color" class="col-sm-2 col-form-label">Marca:
-							</label>
-							<div class="col-sm-6">
-								<select class="custom-select custom-select-sm"
-									th:field="*{marca}">
-									<option th:each="marca : ${listaBrand}"
-										th:value="${marca.idMarca}"
-										th:utext="${marca.nameMarca}+${marca.nameModelo}"/>
-								</select>
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<label for="color" class="col-sm-2 col-form-label">Conductor:
-							</label>
-							<div class="col-sm-6">
-								<select class="custom-select custom-select-sm"
-									th:field="*{conductor}">
-									<option th:each="conductor : ${listaConductor}"
-										th:value="${conductor.idConductor}"
-										th:utext="${conductor.nameConductor}" />
-								</select>
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<div class="col-sm-6">
-								<input type="submit" value="Guardar" class="btn btn-secondary"></input>
-								<a href="/vehicles/list" class="btn btn-danger">Cancelar</a>
-							</div>
-						</div>
-
-					</form>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="u: ${listUsers}">
+								<td th:text="${u.id}"></td>
+								<td th:text="${u.username}"></td>
+								<td><a th:href="@{'/users/detalle/'+${u.id}}"
+									class="btn btn-danger"><i class="fa fa-pen"
+										aria-hidden="true"></i></a></td>
+							</tr>
+						</tbody>
+					</table>
 
 					<p th:text="${mensaje}" class="form-text text-success"></p>
+
 				</div>
 				<!-- /.container-fluid -->
 
@@ -290,7 +230,7 @@
 			<footer class="sticky-footer bg-white">
 				<div class="container my-auto">
 					<div class="copyright text-center my-auto">
-						<span>Copyright &copy; Web 2021</span>
+						<span>Copyright &copy; Web 2020</span>
 					</div>
 				</div>
 			</footer>
@@ -321,14 +261,14 @@
 					</button>
 				</div>
 				<div class="modal-body">Seleccione "Cerrar sesión" a
-					continuación si está listo para finalizar su sesión actual</div>
+					continuación si está listo para finalizar su sesión actual.</div>
 				<div class="modal-footer">
 					<form id="logoutForm" th:action="@{/logout}" method="post">
 						<button class="btn btn-danger"
 							onclick="document.getElementById('logoutForm').submit();"
 							type="submit">Cerrar</button>
 						<button class="btn btn-dark" type="button" data-dismiss="modal"
-							th:href="@{/conductors/list}">Cancel</button>
+							th:href="@{/passengers/list}">Cancel</button>
 					</form>
 				</div>
 			</div>
