--- a/jaleApp/src/main/resources/templates/user/update.html
+++ b/jaleApp/src/main/resources/templates/user/update.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>JaleApp</title>
+<title>JALEAPP</title>
 
 <!-- Custom fonts for this template-->
 <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
@@ -36,11 +36,11 @@
 			<!-- Sidebar - Brand -->
 			<a
 				class="sidebar-brand d-flex align-items-center justify-content-center"
-				th:href="@{/vehicles/list}">
+				th:href="@{/passengers/list}">
 				<div class="sidebar-brand-icon rotate-n-15">
 					<i class="fas fa-leaf"></i>
 				</div>
-				<div class="sidebar-brand-text mx-2">JaleApp Vehiculos</div>
+				<div class="sidebar-brand-text mx-2">JaleApp Pasajero</div>
 			</a>
 
 			<!-- Divider -->
@@ -56,41 +56,18 @@
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/passengers/list}">Pasajeros</a>
-
-				</div>
-				</div>
+					</div>
+					</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
-					<div class="bg-white py-2 collapse-inner rounded">
+				<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
 
 				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-				<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
-
 				</div>
-				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-				<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/brands/list}">Marca</a>						
-
-				</div>
-				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-				<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/conductors/listFind}">Buscar conductores</a>						
-
-				</div>
-				</div>
-				</div>
-					
-
 				
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+				
+	<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/rutas/list}">Rutas
@@ -99,15 +76,21 @@
 
 				</div>
 				
+						
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 				<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/users/list}">Users</a>						
 
 				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/roles/list}">Roles</a>						
+
 				</div>
-				
-				
+				</div>
+				</div>					
 					</li>
 					<li class="nav-item"><a class="nav-link collapsed" href="#"
 				data-target="#collapseTwo" aria-expanded=true
@@ -201,103 +184,95 @@
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Registrar Vehiculo</h1>
+					<h1 class="h3 mb-4 text-gray-800">Usuario</h1>
 
 					<hr class="sidebar-divider">
+					<div th:object="${user}" th:remove="tag">
+						<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger"
+							role="alert">
+							<li th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
+						</ul>
+					</div>
 
-					<form th:action="@{/vehicles/save}" th:object="${vehiculo}"
-						method="post">
-						
+					<form th:action="@{/users/save}" th:object="${user}" method="post">
 						<div class="form-group row">
-							<label for="idState" class="col-sm-2 col-form-label">ID </label>
+							<label for="id" class="col-sm-2 col-form-label">Código</label>
 							<div class="col-sm-6">
-								<input type="number" th:field="*{idVehiculo}" class="form-control"
+								<input placeholder="Ingrese su codigo de usuario" type="number" readonly=»readonly th:field="*{id}" class="form-control"
 									th:errorclass="'form-control alert-danger'" /> <small
 									class="form-text text-danger"
-									th:if="${#fields.hasErrors('idVehiculo')}" th:errors="*{idVehiculo}"></small>
+									th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></small>
 							</div>
 						</div>
-						
 						<div class="form-group row">
-							<label for="Placa" class="col-sm-2 col-form-label">Placa:
-							</label>
+							<label for="username" class="col-sm-2 col-form-label">Usuario</label>
 							<div class="col-sm-6">
-								<input type="text" th:field="*{placaVehiculo}"
+								<input placeholder="Ingrese su nombre de usuario" type="text" th:field="*{username}" class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('username')}"
+									th:errors="*{username}"></small>
+							</div>
+						</div>
+						<div class="form-group row">
+
+							<label for="password" class="col-sm-2 col-form-label">Password</label>
+							<div class="col-sm-6">
+								<input placeholder="Ingrese su contraseña" type="password" th:field="*{password}"
 									class="form-control"
 									th:errorclass="'form-control alert-danger'" /> <small
 									class="form-text text-danger"
-									th:if="${#fields.hasErrors('placaVehiculo')}"
-									th:errors="*{placaVehiculo}"></small>
+									th:if="${#fields.hasErrors('password')}"
+									th:errors="*{password}"></small>
 							</div>
 						</div>
-
 						<div class="form-group row">
-							<label for="Revision" class="col-sm-2 col-form-label">Revision
-								Tecnica: </label>
+
+
+							<label for="estado" class="col-sm-2 col-form-label">Estado</label>
 							<div class="col-sm-6">
-								<input type="text" th:field="*{revisionVehiculo}"
+								<input type="checkbox" th:field="*{enabled}"
 									class="form-control"
 									th:errorclass="'form-control alert-danger'" /> <small
 									class="form-text text-danger"
-									th:if="${#fields.hasErrors('revisionVehiculo')}"
-									th:errors="*{revisionVehiculo}"></small>
+									th:if="${#fields.hasErrors('enabled')}" th:errors="*{enabled}"></small>
 							</div>
 						</div>
-
-						<div class="form-group row">
-							<label for="color" class="col-sm-2 col-form-label">Marca:
-							</label>
-							<div class="col-sm-6">
-								<select class="custom-select custom-select-sm"
-									th:field="*{marca}">
-									<option th:each="marca : ${listaBrand}"
-										th:value="${marca.idMarca}"
-										th:utext="${marca.nameMarca}+${marca.nameModelo}"/>
-								</select>
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<label for="color" class="col-sm-2 col-form-label">Conductor:
-							</label>
-							<div class="col-sm-6">
-								<select class="custom-select custom-select-sm"
-									th:field="*{conductor}">
-									<option th:each="conductor : ${listaConductor}"
-										th:value="${conductor.idConductor}"
-										th:utext="${conductor.nameConductor}" />
-								</select>
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<div class="col-sm-6">
-								<input type="submit" value="Guardar" class="btn btn-secondary"></input>
-								<a href="/vehicles/list" class="btn btn-danger">Cancelar</a>
-							</div>
-						</div>
-
-					</form>
-
-					<p th:text="${mensaje}" class="form-text text-success"></p>
 				</div>
-				<!-- /.container-fluid -->
 
-			</div>
-			<!-- End of Main Content -->
 
-			<!-- Footer -->
-			<footer class="sticky-footer bg-white">
-				<div class="container my-auto">
-					<div class="copyright text-center my-auto">
-						<span>Copyright &copy; Web 2021</span>
+
+				<div class="form-group row">
+					<div class="col-sm-6">
+						<input type="submit" value="Guardar" class="btn btn-secondary"></input>
+						<a href="/users/list" class="btn btn-danger">Cancelar</a>
 					</div>
 				</div>
-			</footer>
-			<!-- End of Footer -->
+
+				</form>
+
+				<p th:text="${mensaje}" class="form-text text-success"></p>
+
+
+
+			</div>
+			<!-- /.container-fluid -->
 
 		</div>
-		<!-- End of Content Wrapper -->
+		<!-- End of Main Content -->
+
+		<!-- Footer -->
+		<footer class="sticky-footer bg-white">
+			<div class="container my-auto">
+				<div class="copyright text-center my-auto">
+					<span>Copyright &copy; JALE 2021</span>
+				</div>
+			</div>
+		</footer>
+		<!-- End of Footer -->
+
+	</div>
+	<!-- End of Content Wrapper -->
 
 	</div>
 	<!-- End of Page Wrapper -->
@@ -328,7 +303,7 @@
 							onclick="document.getElementById('logoutForm').submit();"
 							type="submit">Cerrar</button>
 						<button class="btn btn-dark" type="button" data-dismiss="modal"
-							th:href="@{/conductors/list}">Cancel</button>
+							th:href="@{/passengers/list}">Cancel</button>
 					</form>
 				</div>
 			</div>
